--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog - About</title>
+    <title>About Me</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,6 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -55,9 +54,6 @@
                     </li>
                     <li>
                         <a href="about.html">About</a>
-                    </li>
-                    <li>
-                        <a href="post.html">Sample Post</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -78,7 +74,7 @@
                     <div class="page-heading">
                         <h1>About Me</h1>
                         <hr class="small">
-                        <span class="subheading">This is what I do.</span>
+                        <span class="subheading">Yo.</span>
                     </div>
                 </div>
             </div>
@@ -90,7 +86,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <p>Hi.  My name is Richard Yu, I'm an aspiring software engineer, and this is my blog.</p>
-                <p>I recently discovered that I love to code, and I've been completely addicted ever since. A few months ago I decided to take the plunge and quit my job in order to learn JavaScript full time.  I also enrolled in MakerSquare, an immersive JavaScript program, that will hopefully allow me to live the dream of doing somehting I love and get paid for it :)</p>
+                <p>I recently discovered that I love to code, and have been completely addicted ever since. A few months ago I decided to take the plunge and quit my job in order to learn JavaScript full time.  I also enrolled in MakerSquare, an immersive JavaScript program, which hopefully will allow me to live the dream of getting paid for doing something I love.</p>
                 <p>I'll be using this as a platform to share my random thoughts and document my journey to becoming a professional web developer. Feel free to say hello!</p>
             </div>
         </div>
@@ -129,7 +125,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="copyright text-muted">Copyright &copy; Richard Yu 2016</p>
                 </div>
             </div>
         </div>
