--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                     <div class="page-heading">
                         <h1>About Me</h1>
                         <hr class="small">
-                        <span class="subheading">Yo.</span>
+                        <span class="subheading">Hi.</span>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Hi.  My name is Richard Yu, I'm an aspiring software engineer, and this is my blog.</p>
+                <p>My name is Richard Yu, I'm an aspiring software engineer, and this is my blog.</p>
                 <p>I recently discovered that I love to code, and have been completely addicted ever since. A few months ago I decided to take the plunge and quit my job in order to learn JavaScript full time.  I also enrolled in MakerSquare, an immersive JavaScript program, which hopefully will allow me to live the dream of getting paid for doing something I love.</p>
                 <p>I'll be using this as a platform to share my random thoughts and document my journey to becoming a professional web developer. Feel free to say hello!</p>
             </div>
